Done with HTML and CSS design: Working on JavaScript first stage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </div>
         <div class="input">
             <div class="clear">CLEAR</div>
-            <div class="del">DEL</div>
+            <div class="ce">CE</div>
+            <div class="del_image"><img src="image/deleteButton.png" alt="delete"></div>
             <div class="all_buttons">
                 <button class="number">1</button>
                 <button class="number">2</button>
